--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 ﻿services:
-  app:
+  app-dev:
     image: node:20-alpine
     working_dir: /app
     ports:
@@ -22,6 +22,17 @@
       - .:/app
       - node_modules:/app/node_modules
     command: sh -c "npm install && npm run build && npm run preview -- --host 0.0.0.0 --port 4173"
+
+  app-prod:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    environment:
+      NODE_ENV: production
+      PORT: 3000
+    restart: always
 
 volumes:
   node_modules:
