--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sveltejs/adapter-node": "^5.5.3",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@types/nodemailer": "^7.0.10",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "svelte": "^5.0.0",
@@ -23,6 +24,7 @@
     "vite": "^5.4.10"
   },
   "dependencies": {
-    "@insforge/sdk": "^1.1.5"
+    "@insforge/sdk": "^1.1.5",
+    "nodemailer": "^8.0.1"
   }
 }
